fix(b. task): don't throw if there are more partitions of embeds then contents